--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Портфолио — Алан</title>
+  <title>14.azv</title>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=Roboto:wght@300;400&display=swap');
 
@@ -248,25 +248,25 @@
 
   <section id="about" data-animate>
     <h2>Обо мне</h2>
-    <p>Я студент, изучающий программирование и дизайн. Мне интересно создавать визуально мощные и технологичные вещи — сайты, интерфейсы, концепты. Моя цель — развиваться и воплощать идеи, которые выделяются среди других.</p>
+    <p>Я дизайнер, монтажер, програмист, и просто добрый человек :) Я люблю создавать и проектировать вещи, от фотографий которые будут приятны душе до сайтов и программ, которые будут полезны всем. </p>
   </section>
 
   <section id="projects" data-animate>
-    <h2>Проекты</h2>
+    <h2>Портфолио</h2>
     <div class="projects-grid">
       <div class="project-card">
-        <h3>Neo Interface</h3>
-        <p>Экспериментальный UI с неоновыми линиями и плавной геометрией.</p>
+        <h3>Видео-проекты</h3>
+        <p>Видео, смонтированные мною либо для себя либо для друзей.</p>
         <a href="#">Открыть</a>
       </div>
       <div class="project-card">
-        <h3>CyberCard</h3>
-        <p>Интерактивная визитка в виде голографической карточки.</p>
+        <h3>Работы в фотошоп</h3>
+        <p>Если вас интересует что я редактировал и обрабатывал в фотошопе, вам сюда.</p>
         <a href="#">Открыть</a>
       </div>
       <div class="project-card">
-        <h3>Future Vision</h3>
-        <p>Концепт сайта с 3D-анимацией и эффектом глубины.</p>
+        <h3>Проекты, которые я спрограмировал</h3>
+        <p>Нажав открыть на этой карточке, вы обновите страницу сайта. Я пока ничего больше этого сайта не сделал для портфолио</p>
         <a href="#">Открыть</a>
       </div>
     </div>
@@ -279,7 +279,7 @@
   </section>
 
   <footer>
-    © 2025 Алан — будущее начинается здесь
+    © 2025 Портфолио меня заканчивается здесь, а начинается в начале этого сайта.
   </footer>
 
   <script>
@@ -295,4 +295,5 @@
   </script>
 
 </body>
+
 </html>
