--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
 
   <header>
     <nav>
-      <h1 class="logo">ALAN</h1>
+      <h1 class="logo">14.azv</h1>
       <ul class="menu">
         <li><a href="#hero">Главная</a></li>
         <li><a href="#about">Обо мне</a></li>
@@ -242,7 +242,7 @@
 
   <section id="hero">
     <h1>Привет, я Алан</h1>
-    <p>Создаю современные сайты и проекты в футуристичном стиле. Стремлюсь соединить технологии, стиль и функциональность.</p>
+    <p>Создаю современные спроекты и все что порадует вам глаз и вашу душу.</p>
     <a href="#projects"><button class="btn">Мои работы</button></a>
   </section>
 
@@ -297,3 +297,4 @@
 </body>
 
 </html>
+
