--- a/index.html
+++ b/index.html
@@ -274,8 +274,8 @@
 
   <section id="contacts" data-animate>
     <h2>Контакты</h2>
-    <p style="text-align:center;">Email: <a href="mailto:alan@example.com" class="neon">alan@example.com</a></p>
-    <p style="text-align:center;">Telegram: <a href="https://t.me/username" class="neon">@username</a></p>
+    <p style="text-align:center;">Email: <a href="mailto:alan@example.com" class="neon">alan_zasseev@mail.ru</a></p>
+    <p style="text-align:center;">Telegram: <a href="https://t.me/username" class="neon">@vellonчел</a></p>
   </section>
 
   <footer>
@@ -297,4 +297,5 @@
 </body>
 
 </html>
+
 
