--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
   <section id="contacts" data-animate>
     <h2>Контакты</h2>
     <p style="text-align:center;">Email: <a href="mailto:alan@example.com" class="neon">alan_zasseev@mail.ru</a></p>
-    <p style="text-align:center;">Telegram: <a href="https://t.me/username" class="neon">@vellonчел</a></p>
+    <p style="text-align:center;">Telegram: <a href="https://t.me/username" class="neon">@vellonchel</a></p>
   </section>
 
   <footer>
@@ -297,5 +297,6 @@
 </body>
 
 </html>
+
 
 
