--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       top: 0;
       width: 100%;
       background: rgba(10, 10, 10, 0.8);
-      border-bottom: 1px solid rgba(0, 255, 255, 0.2);
+      border-bottom: 1px solid rgba(0,0,255, 0.2);
       backdrop-filter: blur(8px);
       z-index: 1000;
     }
@@ -43,8 +43,8 @@
     .logo {
       font-family: 'Orbitron', sans-serif;
       font-size: 26px;
-      color: #00ffff;
-      text-shadow: 0 0 10px #00ffff;
+      color: #0000FF;
+      text-shadow: 0 0 10px #0000FF;
       letter-spacing: 2px;
     }
 
@@ -69,13 +69,13 @@
       bottom: -5px;
       width: 0;
       height: 2px;
-      background: #00ffff;
-      box-shadow: 0 0 10px #00ffff;
+      background: #0000FF;
+      box-shadow: 0 0 10px #0000FF;
       transition: 0.3s;
     }
 
     .menu a:hover {
-      color: #00ffff;
+      color: #0000FF;
     }
 
     .menu a:hover::after {
@@ -95,8 +95,8 @@
     #hero h1 {
       font-family: 'Orbitron', sans-serif;
       font-size: 3rem;
-      color: #00ffff;
-      text-shadow: 0 0 20px #00ffff;
+      color: #0000FF;
+      text-shadow: 0 0 20px #0000FF;
       animation: glow 3s infinite alternate;
     }
 
@@ -108,8 +108,8 @@
     }
 
     @keyframes glow {
-      from { text-shadow: 0 0 10px #00ffff; }
-      to { text-shadow: 0 0 25px #00ffff, 0 0 50px #00ffff; }
+      from { text-shadow: 0 0 10px #0000FF; }
+      to { text-shadow: 0 0 25px #0000FF, 0 0 50px #0000FF; }
     }
 
     .btn {
@@ -117,19 +117,19 @@
       padding: 12px 30px;
       font-family: 'Orbitron', sans-serif;
       background: transparent;
-      border: 2px solid #00ffff;
-      color: #00ffff;
+      border: 2px solid #0000FF;
+      color: #0000FF;
       text-transform: uppercase;
       border-radius: 10px;
       cursor: pointer;
       transition: 0.3s;
-      box-shadow: 0 0 15px rgba(0,255,255,0.2);
+      box-shadow: 0 0 15px rgba(0,0,255,0.2);
     }
 
     .btn:hover {
-      background: #00ffff;
+      background: #0000FF;
       color: #000;
-      box-shadow: 0 0 30px #00ffff;
+      box-shadow: 0 0 30px #0000FF;
     }
 
     section {
@@ -142,9 +142,9 @@
       font-family: 'Orbitron', sans-serif;
       text-align: center;
       font-size: 2rem;
-      color: #00ffff;
+      color: #0000FF;
       margin-bottom: 40px;
-      text-shadow: 0 0 15px #00ffff;
+      text-shadow: 0 0 15px #0000FF;
     }
 
     #about p {
@@ -163,21 +163,21 @@
 
     .project-card {
       background: rgba(20, 20, 20, 0.9);
-      border: 1px solid rgba(0, 255, 255, 0.3);
+      border: 1px solid rgba(0,0,255, 0.3);
       border-radius: 15px;
       padding: 25px;
       text-align: center;
       transition: 0.4s;
-      box-shadow: 0 0 10px rgba(0,255,255,0.1);
+      box-shadow: 0 0 10px rgba(0,0,255,0.1);
     }
 
     .project-card:hover {
       transform: translateY(-10px);
-      box-shadow: 0 0 25px rgba(0,255,255,0.4);
+      box-shadow: 0 0 25px rgba(0,0,255,0.4);
     }
 
     .project-card h3 {
-      color: #00ffff;
+      color: #0000FF;
       margin-bottom: 10px;
       font-family: 'Orbitron', sans-serif;
     }
@@ -189,28 +189,28 @@
     }
 
     .project-card a {
-      color: #00ffff;
+      color: #0000FF;
       text-decoration: none;
       font-weight: bold;
       transition: 0.3s;
     }
 
     .project-card a:hover {
-      text-shadow: 0 0 10px #00ffff;
+      text-shadow: 0 0 10px #0000FF;
     }
 
     footer {
       text-align: center;
       padding: 40px;
-      border-top: 1px solid rgba(0,255,255,0.2);
+      border-top: 1px solid rgba(0,0,255,0.2);
       color: #555;
       font-size: 14px;
     }
 
     /* Neon glow effect */
     .neon {
-      color: #00ffff;
-      text-shadow: 0 0 10px #00ffff, 0 0 20px #00ffff;
+      color: #0000FF;
+      text-shadow: 0 0 10px #0000FF, 0 0 20px #0000FF;
     }
 
     /* Scroll reveal animation */
