--- a/index.html
+++ b/index.html
@@ -15,10 +15,13 @@
     }
 
     body {
-      font-family: 'Roboto', sans-serif;
-      background: radial-gradient(circle at top, #0a0a0a 0%, #000 100%);
-      color: #e0e0e0;
-      overflow-x: hidden;
+  font-family: 'Roboto', sans-serif;
+  background: url("Шапочка.png") no-repeat center center fixed;
+  background-size: cover;
+  color: #e0e0e0;
+  overflow-x: hidden;
+}
+
     }
 
     header {
