--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 
     /* Neon glow effect */
     .neon {
-      color: #0000FF;
+      color: #1E90FF;
       text-shadow: 0 0 10px #0000FF, 0 0 20px #0000FF;
     }
 
