Change background image in index.html

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     body {
   font-family: 'Roboto', sans-serif;
-  background: url("Шапочка.png") no-repeat center center fixed;
+  background: url("statphoto.png") no-repeat center center fixed;
   background-size: cover;
   color: #e0e0e0;
   overflow-x: hidden;
