--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
     }
 
     .project-card p {
-      color: #bbb;
+      color: #000000;
       font-size: 14px;
       margin-bottom: 15px;
     }
@@ -199,7 +199,7 @@
     }
 
     .project-card a:hover {
-      text-shadow: 0 0 10px #0000FF;
+      text-shadow: 0 0 10px #0437F2;
     }
 
     footer {
@@ -212,8 +212,8 @@
 
     /* Neon glow effect */
     .neon {
-      color: #1E90FF;
-      text-shadow: 0 0 10px #0000FF, 0 0 20px #0000FF;
+      color: #0096FF;
+      text-shadow: 0 0 10px #1F51FF, 0 0 20px #1F51FF;
     }
 
     /* Scroll reveal animation */
