--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       font-family: 'Orbitron', sans-serif;
       font-size: 3rem;
       color: #0000FF;
-      text-shadow: 0 0 20px #0000FF;
+      text-shadow: 0 0 20px #1E90FF;
       animation: glow 3s infinite alternate;
     }
 
@@ -180,13 +180,13 @@
     }
 
     .project-card h3 {
-      color: #0000FF;
+      color: #00FFFF;
       margin-bottom: 10px;
       font-family: 'Orbitron', sans-serif;
     }
 
     .project-card p {
-      color: #000000;
+      color: #0000СС;
       font-size: 14px;
       margin-bottom: 15px;
     }
