Update video link in project card

--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
         <h3>Видео-проекты</h3>
         <p>Видео, смонтированные мною либо для себя, либо для друзей.</p>
         
-        <a href="[ВСТАВЬ_ССЫЛКУ_НА_ВИДЕО_СЮДА]" target="_blank">Открыть</a>
+        <a href="https://www.youtube.com/@14avz" target="_blank">Открыть</a>
       </div>
 
       <div class="project-card">
