--- a/index.html
+++ b/index.html
@@ -15,12 +15,14 @@
     }
 
     body {
-      font-family: 'Roboto', sans-serif;
-      /* Убедись, что картинка statphoto.png лежит в той же папке, что и этот файл */
-      background: url("statphoto.png") no-repeat center center fixed;
-      background-size: cover;
-      color: #e0e0e0;
-      overflow-x: hidden;
+  font-family: 'Roboto', sans-serif;
+  /* background: url("statphoto.png") no-repeat center center fixed; */
+  /* background-size: cover; */
+  color: #e0e0e0;
+  overflow-x: hidden;
+  /* Если вы хотите сделать фон просто черным, добавьте: */
+  background-color: #00000;
+}
     }
 
     header {
