--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   color: #e0e0e0;
   overflow-x: hidden;
   /* Если вы хотите сделать фон просто черным, добавьте: */
-  background-color: #00000;
+  background-color */  
 }
     }
 
