--- a/index.html
+++ b/index.html
@@ -16,12 +16,9 @@
 
     body {
   font-family: 'Roboto', sans-serif;
-  /* background: url("statphoto.png") no-repeat center center fixed; */
-  /* background-size: cover; */
+  background-color: #000; /* Устанавливаем чистый черный фон */
   color: #e0e0e0;
   overflow-x: hidden;
-  /* Если вы хотите сделать фон просто черным, добавьте: */
-  background-color */  
 }
     }
 
