--- a/index.html
+++ b/index.html
@@ -16,12 +16,15 @@
 
     body {
   font-family: 'Roboto', sans-serif;
-  background-color: #000; /* Устанавливаем чистый черный фон */
   color: #e0e0e0;
   overflow-x: hidden;
+  /* Градиент из трех цветов */
+  background: linear-gradient(-45deg, #000000, #0a0a2a, #000000);
+  background-size: 400% 400%;
+  /* Анимация длительностью 15 секунд */
+  animation: gradientBG 15s ease infinite;
 }
-    }
-
+    
     header {
       position: fixed;
       top: 0;
@@ -227,6 +230,11 @@
       opacity: 1;
       transform: translateY(0);
     }
+  @keyframes gradientBG {
+  0% { background-position: 0% 50%; }
+  50% { background-position: 100% 50%; }
+  100% { background-position: 0% 50%; }
+}
   </style>
 </head>
 <body>
