--- a/index.html
+++ b/index.html
@@ -16,13 +16,11 @@
 
     body {
   font-family: 'Roboto', sans-serif;
+  /* Темно-синий в центре, уходящий в черный к краям */
+  background: radial-gradient(circle at center, #0a0a2a 0%, #000000 100%);
   color: #e0e0e0;
   overflow-x: hidden;
-  /* Градиент из трех цветов */
-  background: linear-gradient(-45deg, #000000, #0a0a2a, #000000);
-  background-size: 400% 400%;
-  /* Анимация длительностью 15 секунд */
-  animation: gradientBG 15s ease infinite;
+  min-height: 100vh; /* Важно, чтобы градиент растянулся на весь экран */
 }
     
     header {
