--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
       scroll-behavior: smooth;
     }
 
-    body {
+   body {
   font-family: 'Roboto', sans-serif;
-  /* Темно-синий в центре, уходящий в черный к краям */
-  background: radial-gradient(circle at center, #0a0a2a 0%, #000000 100%);
+  /* Диагональный градиент: черный -> темно-фиолетовый */
+  background: linear-gradient(45deg, #000000, #130f1f);
   color: #e0e0e0;
   overflow-x: hidden;
-  min-height: 100vh; /* Важно, чтобы градиент растянулся на весь экран */
+  min-height: 100vh;
 }
     
     header {
