--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
    body {
   font-family: 'Roboto', sans-serif;
   /* Диагональный градиент: черный -> темно-фиолетовый */
-  background: linear-gradient(45deg, #000000, #130f1f);
+  background: linear-gradient(45deg, #000000, #00008B);
   color: #e0e0e0;
   overflow-x: hidden;
   min-height: 100vh;
