--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 
    body {
   font-family: 'Roboto', sans-serif;
-  /* Диагональный градиент: черный -> темно-фиолетовый */
-  background: linear-gradient(45deg, #000000, #4B0082);
+  /* Градиент сверху вниз: от черного к очень темному синему */
+  background: linear-gradient(to bottom, #000000, #0a0e27);
   color: #e0e0e0;
   overflow-x: hidden;
-  min-height: 100vh;
+  min-height: 100vh; /* Важно: растягивает фон на весь экран */
 }
     
     header {
