Update system version display in index.html

--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
       const verDisplay = document.getElementById('version-display');
 
       // 1. НАПИШИ СЮДА НУЖНУЮ ВЕРСИЮ (МЕНЯЙ ЭТУ СТРОКУ)
-      verDisplay.innerText = "SYSTEM UPDATE: v.14.0.1"; 
+      verDisplay.innerText = "SYSTEM UPDATE: 0.32; 
 
       const messages = [
         "Connecting...",
