--- a/index.html
+++ b/index.html
@@ -388,14 +388,14 @@
     const verDisplay = document.getElementById('version-display');
 
     // 1. НАПИШИ СЮДА НУЖНУЮ ВЕРСИЮ (МЕНЯЙ ЭТУ СТРОКУ)
-    verDisplay.innerText = "SYSTEM UPDATE: v.14.0.1"; 
+    verDisplay.innerText = "SYSTEM UPDATE: 0.33"; 
 
     const messages = [
       "Connecting...",
       "Loading assets...",
       "Decrypting data...",
       "Starting UI...",
-      "Welcome, Alan."
+      "Welcome, quest."
     ];
 
     let progress = 0;
