Add favicon link to index.html
Added a favicon link to the head section.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>14.azv</title>
+  
+  <link rel="icon" href="icon.png" type="image/png"> 
+  
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=Roboto:wght@300;400&display=swap');
 
@@ -21,7 +24,7 @@
   color: #e0e0e0;
   overflow-x: hidden;
   min-height: 100vh; /* Важно: растягивает фон на весь экран */
-}
+    }
     
     /* --- СТИЛИ ДЛЯ АНИМАЦИИ ЗАГРУЗКИ (ДОБАВЛЕНО) --- */
     .loader-overlay {
