--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   font-family: 'Roboto', sans-serif;
   
   /* --- НОВЫЙ ФОН С ИЗОБРАЖЕНИЕМ --- */
-  background: url('statphoto.png') no-repeat center center fixed;
+  background: url('background.png') no-repeat center center fixed;
   background-size: cover; /* Растягивает изображение, чтобы оно покрывало весь экран */
   /* ---------------------------------- */
   
