--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>14.azv</title>
+  <title>azv4work</title>
   
   <link rel="icon" href="icon.png" type="image/png"> 
   
@@ -604,7 +604,7 @@
   <section id="contacts" data-animate>
     <h2 data-i18n="contacts_title">Контакты</h2>
     <p style="text-align:center;"><span data-i18n="contact_email_label">Email:</span> <a href="mailto:alan_zasseev@mail.ru" class="neon">alan_zasseev@mail.ru</a></p>
-    <p style="text-align:center;">Telegram: <a href="https://t.me/vellonchel" class="neon">@vellonchel</a></p>
+    <p style="text-align:center;">Telegram: <a href="https://t.me/vellonchel" class="neon">@AL</a></p>
   </section>
 
   <footer>
