Change hero text color from sapphire to black glow

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
     #hero h1 {
       font-family: 'Orbitron', sans-serif;
       font-size: 3rem;
-      color: #1F51FF; /* САПФИР */
+      color: #00000; /* ЧЕРНОЕ СВЕЧЕНИЕ */
       text-shadow: 0 0 20px #7AA9FF; /* СВЕТЛО-САПФИР */
       animation: glow 3s infinite alternate;
     }
